--- a/WEB Toán(Test)/Toán1.html
+++ b/WEB Toán(Test)/Toán1.html
@@ -14,15 +14,15 @@
         <h1 class="text-center">Giải phương trình bậc 2 - Hiếu Trung</h1>
         <form id="equationForm" class="mt-4">
             <div class="mb-3">
-                <label for="A" class="form-label">Nghiệm A</label>
+                <label for="A" class="form-label">Nhập A</label>
                 <input type="number" class="form-control" id="A" required>
             </div>
             <div class="mb-3">
-                <label for="B" class="form-label">Nghiệm B</label>
+                <label for="B" class="form-label">Nhập B</label>
                 <input type="number" class="form-control" id="B" required>
             </div>
             <div class="mb-3">
-                <label for="C" class="form-label">Nghiệm C</label>
+                <label for="C" class="form-label">Nhập C</label>
                 <input type="number" class="form-control" id="C" required>
             </div>
             <button type="submit" class="btn btn-primary">Giải</button>
